--- a/Aarppo/app/src/main/res/layout/custom_list_match_schedule.xml
+++ b/Aarppo/app/src/main/res/layout/custom_list_match_schedule.xml
@@ -1,43 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    card_view:cardUseCompatPadding="true"
+    card_view:cardElevation="3dp"
+    card_view:cardCornerRadius="4dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:background="#ffffff"
-        android:layout_marginBottom="10dp"
-        android:paddingBottom="10dp"
+        android:background="@color/colorAccent"
         android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:elevation="3dp"
         android:weightSum="1">
 
         <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:id="@+id/img"
-            android:src="@mipmap/ic_launcher"
+            android:src="@mipmap/ic_football"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"/>
-
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="150sp"
+            android:layout_marginLeft="10dp"
             android:layout_height="match_parent">
 
             <TextView
             android:layout_width="174dp"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/colorPrimaryDark"
             android:text="Date and Time"
+            android:textStyle="bold"
             android:id="@+id/tv_name" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="\@"
+                android:textColor="@color/colorPrimaryDark"
                 android:id="@+id/textView3" />
 
             <TextView
@@ -46,6 +53,7 @@
                 android:layout_width="88dp"
                 android:maxLines="4"
                 android:lines="4"
+                android:textColor="@color/colorPrimaryDark"
                 android:text="ground"
                 android:id="@+id/txt_ground" />
         </LinearLayout>
@@ -54,15 +62,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:background="#ffffff"
+            android:background="@color/colorPrimaryDark"
             android:paddingBottom="10dp"
-            android:paddingRight="10dp">
+            android:elevation="4dp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="TEAM 1"
+                android:textStyle="bold"
+                android:textColor="@color/colorAccent"
                 android:layout_marginLeft="20dp"
                 android:id="@+id/team1" />
 
@@ -71,6 +81,7 @@
                 android:layout_height="wrap_content"
                 android:text="Vs"
                 android:id="@+id/textView2"
+                android:textColor="@color/colorAccent"
                 android:layout_marginLeft="20dp"
                 android:textSize="20sp"
                 android:layout_gravity="center_horizontal" />
@@ -80,6 +91,8 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:layout_marginLeft="20dp"
+                android:textStyle="bold"
+                android:textColor="@color/colorAccent"
                 android:text="TEAM2"
                 android:id="@+id/team2" />
         </LinearLayout>
@@ -87,6 +100,6 @@
 
     </LinearLayout>
 
-</LinearLayout>
+</android.support.v7.widget.CardView>
 
 
