--- a/Aarppo/app/src/main/res/layout/fragment_islmatch_page.xml
+++ b/Aarppo/app/src/main/res/layout/fragment_islmatch_page.xml
@@ -14,62 +14,65 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="right|top">
+        android:layout_gravity="left|bottom">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="for the battle"
             android:id="@+id/textView"
+            android:textColor="@color/colorAccent"
             android:textAlignment="center"
             android:layout_gravity="right"
             android:layout_below="@+id/txt_countDown"
-            android:layout_alignStart="@+id/textView7" />
+            android:layout_alignEnd="@+id/txt_countDown" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="days"
+            android:textColor="@color/colorAccent"
             android:id="@+id/textView4"
-            android:layout_marginStart="0dp"
             android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignStart="@+id/txt_countDown" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="hours"
+            android:textColor="@color/colorAccent"
             android:id="@+id/textView5"
             android:layout_alignParentTop="true"
-            android:layout_toEndOf="@+id/textView4"
-            android:layout_marginStart="21dp" />
+            android:layout_toStartOf="@+id/textView10" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="00: 00 : 00 : 00"
+            android:textColor="@color/colorPrimary"
+            android:textStyle="bold"
             android:id="@+id/txt_countDown"
             android:textSize="40sp"
-            android:layout_below="@+id/textView4"
-            android:layout_alignParentStart="true" />
+            android:layout_below="@+id/textView5"
+            android:layout_centerHorizontal="true" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="minutes"
+            android:textColor="@color/colorAccent"
             android:id="@+id/textView6"
             android:layout_alignParentTop="true"
-            android:layout_toEndOf="@+id/textView5"
-            android:layout_marginStart="24dp" />
+            android:layout_alignStart="@+id/textView8" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="seconds"
+            android:textColor="@color/colorAccent"
             android:id="@+id/textView7"
             android:layout_alignParentTop="true"
-            android:layout_toEndOf="@+id/textView6"
-            android:layout_marginStart="13dp" />
+            android:layout_alignEnd="@+id/chk_Aarpo5" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -78,14 +81,19 @@
             android:maxLines="2"
             android:lines="2"
             android:id="@+id/isl_team1"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimary"
             android:layout_marginTop="26dp"
             android:layout_below="@+id/textView"
-            android:layout_toEndOf="@+id/textView4" />
+            android:layout_alignStart="@+id/txt_countDown"
+            android:layout_toStartOf="@+id/textView10" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Vs"
+            android:textStyle="bold"
+            android:textColor="@color/colorAccent"
             android:id="@+id/textView8"
             android:layout_alignTop="@+id/isl_team1"
             android:layout_centerHorizontal="true" />
@@ -94,16 +102,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Team2"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimary"
             android:maxLines="2"
             android:lines="2"
             android:id="@+id/isl_team2"
             android:layout_alignTop="@+id/textView8"
-            android:layout_toEndOf="@+id/textView7" />
+            android:layout_alignEnd="@+id/txt_countDown"
+            android:layout_toEndOf="@+id/textView6" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Ground"
+            android:textColor="@color/colorAccent"
             android:id="@+id/isl_ground"
             android:layout_marginTop="19dp"
             android:layout_below="@+id/textView8"
@@ -114,55 +126,63 @@
             android:layout_height="wrap_content"
             android:text="I am cheering"
             android:id="@+id/textView9"
-            android:layout_below="@+id/isl_ground"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="30dp" />
+            android:textColor="@color/colorPrimary"
+            android:layout_above="@+id/textView10"
+            android:layout_alignEnd="@+id/textView10" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="I will sync at "
+            android:text="I will sing at "
+            android:textColor="@color/colorPrimary"
             android:id="@+id/textView10"
-            android:layout_below="@+id/textView9"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="32dp" />
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true" />
 
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="10th minute"
             android:id="@+id/chk_Aarpo1"
+            android:layout_marginTop="24dp"
+            android:checked="false"
+            android:textColor="@color/colorAccent"
+            android:buttonTint="@color/colorPrimaryDark"
             android:layout_below="@+id/textView10"
-            android:layout_marginTop="19dp"
-            android:layout_alignEnd="@+id/chk_Aarpo2"
-            android:checked="false" />
+            android:layout_toStartOf="@+id/textView9" />
 
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="20th minute"
             android:id="@+id/chk_Aarpo2"
+            android:checked="false"
+            android:textColor="@color/colorAccent"
+            android:buttonTint="@color/colorPrimaryDark"
             android:layout_below="@+id/chk_Aarpo1"
-            android:layout_alignParentStart="true"
-            android:checked="false" />
+            android:layout_alignStart="@+id/chk_Aarpo1" />
 
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="30th minute"
             android:id="@+id/chk_Aarpo3"
+            android:checked="false"
+            android:textColor="@color/colorAccent"
+            android:buttonTint="@color/colorPrimaryDark"
             android:layout_below="@+id/chk_Aarpo2"
-            android:layout_alignParentStart="true"
-            android:checked="false" />
+            android:layout_alignStart="@+id/chk_Aarpo2" />
 
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="50th minute"
             android:id="@+id/chk_Aarpo5"
-            android:layout_alignBottom="@+id/chk_Aarpo1"
-            android:layout_toEndOf="@+id/textView7"
-            android:checked="false" />
+            android:checked="false"
+            android:textColor="@color/colorAccent"
+            android:buttonTint="@color/colorPrimaryDark"
+            android:layout_alignTop="@+id/chk_Aarpo1"
+            android:layout_toEndOf="@+id/textView8" />
 
         <CheckBox
             android:layout_width="wrap_content"
@@ -171,7 +191,9 @@
             android:id="@+id/chk_Aarpo6"
             android:layout_alignBottom="@+id/chk_Aarpo2"
             android:layout_alignStart="@+id/chk_Aarpo5"
-            android:checked="false" />
+            android:checked="false"
+            android:textColor="@color/colorAccent"
+            android:buttonTint="@color/colorPrimaryDark"/>
 
         <CheckBox
             android:layout_width="wrap_content"
@@ -180,15 +202,20 @@
             android:id="@+id/chk_Aarpo7"
             android:layout_alignTop="@+id/chk_Aarpo3"
             android:layout_alignStart="@+id/chk_Aarpo6"
-            android:checked="false" />
+            android:checked="false"
+            android:textColor="@color/colorAccent"
+            android:buttonTint="@color/colorPrimaryDark"/>
 
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="45th minute"
             android:id="@+id/chk_Aarpo4"
+            android:checked="false"
+            android:textColor="@color/colorAccent"
+            android:buttonTint="@color/colorPrimaryDark"
             android:layout_below="@+id/chk_Aarpo3"
-            android:checked="false" />
+            android:layout_alignStart="@+id/chk_Aarpo3" />
 
         <CheckBox
             android:layout_width="wrap_content"
@@ -197,6 +224,8 @@
             android:id="@+id/chk_Aarpo8"
             android:layout_alignBottom="@+id/chk_Aarpo4"
             android:layout_alignStart="@+id/chk_Aarpo7"
-            android:checked="false" />
+            android:checked="false"
+            android:textColor="@color/colorAccent"
+            android:buttonTint="@color/colorPrimaryDark"/>
     </RelativeLayout>
 </FrameLayout>
