--- a/Aarppo/app/src/main/res/layout/custom_list_match_schedule.xml
+++ b/Aarppo/app/src/main/res/layout/custom_list_match_schedule.xml
@@ -18,13 +18,6 @@
         android:elevation="3dp"
         android:weightSum="1">
 
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:id="@+id/img"
-            android:src="@mipmap/ic_football"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"/>
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="150sp"
@@ -43,14 +36,26 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="\@"
+                android:text="month"
+                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="@color/colorPrimaryDark"
-                android:id="@+id/textView3" />
+
+                android:textStyle="bold"
+                android:id="@+id/txt_mnth" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="time"
+
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@color/colorPrimaryDark"
+                android:id="@+id/txt_time" />
 
             <TextView
                 android:gravity="left"
-                android:layout_height="fill_parent"
-                android:layout_width="88dp"
+                android:layout_height="40dp"
+                android:layout_width="136dp"
                 android:maxLines="4"
                 android:lines="4"
                 android:textColor="@color/colorPrimaryDark"
@@ -64,6 +69,8 @@
             android:orientation="vertical"
             android:background="@color/colorPrimaryDark"
             android:paddingBottom="10dp"
+            android:paddingRight="10dp"
+            android:layout_marginRight="5sp"
             android:elevation="4dp">
 
             <TextView
@@ -79,12 +86,11 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Vs"
+                android:text="Vs                                                                         "
                 android:id="@+id/textView2"
                 android:textColor="@color/colorAccent"
                 android:layout_marginLeft="20dp"
-                android:textSize="20sp"
-                android:layout_gravity="center_horizontal" />
+                android:textSize="20sp" />
 
             <TextView
                 android:layout_width="wrap_content"
