--- a/Aarppo/app/src/main/res/layout/custom_list_match_schedule.xml
+++ b/Aarppo/app/src/main/res/layout/custom_list_match_schedule.xml
@@ -6,106 +6,157 @@
     android:layout_height="wrap_content"
     card_view:cardUseCompatPadding="true"
     card_view:cardElevation="3dp"
-    card_view:cardCornerRadius="4dp">
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="@color/colorAccent"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:elevation="3dp"
+        android:layout_height="140dp"
+        android:orientation="vertical"
+        android:background="@color/colorPrimaryDark"
+
         android:weightSum="1">
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="150sp"
-            android:layout_marginLeft="10dp"
-            android:layout_height="match_parent">
 
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="110sp"
+            android:layout_alignParentTop="true"
+            android:id="@+id/topLayout"
+            android:layout_alignParentStart="true">
+
+            <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="110dp"
+            android:orientation="vertical"
+            android:background="@color/colorPrimary"
+            android:id="@+id/linearLayout2"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:layout_toStartOf="@+id/linearLayout"
+                android:weightSum="1">
+
+                <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="79dp"
+                android:id="@+id/img_team1"
+                android:layout_alignParentTop="true"
+                android:src="@drawable/team1"
+                android:layout_alignParentStart="true" />
+
+                <TextView
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:text="TEAM 1"
+                    android:textStyle="bold"
+                    android:textColor="#ffffff"
+                    android:layout_marginLeft="20dp"
+                    android:id="@+id/team1"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true" />
+
+
+            </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="100dp"
+            android:layout_height="110dp"
+            android:orientation="vertical"
+            android:background="@color/colorPrimaryDark"
+            android:id="@+id/linearLayout"
+
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true">
             <TextView
-            android:layout_width="174dp"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@color/colorPrimaryDark"
-            android:text="Date and Time"
-            android:textStyle="bold"
-            android:id="@+id/tv_name" />
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="@color/colorPrimary"
+                android:text="Date and Time"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:id="@+id/tv_name"
+                android:layout_above="@+id/txt_mnth"
+                android:layout_alignParentStart="true" />
+
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="month"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="@color/colorPrimaryDark"
-
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="@color/colorPrimary"
                 android:textStyle="bold"
-                android:id="@+id/txt_mnth" />
+                android:id="@+id/txt_mnth"
+                android:layout_gravity="center_horizontal"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="time"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="@color/colorPrimary"
+                android:id="@+id/txt_time"
+                android:layout_gravity="center_horizontal"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true" />
 
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="@color/colorPrimaryDark"
-                android:id="@+id/txt_time" />
+        </RelativeLayout>
 
-            <TextView
-                android:gravity="left"
-                android:layout_height="40dp"
-                android:layout_width="136dp"
-                android:maxLines="4"
-                android:lines="4"
-                android:textColor="@color/colorPrimaryDark"
-                android:text="ground"
-                android:id="@+id/txt_ground" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="110dp"
+                android:orientation="vertical"
+                android:background="@color/colorPrimary"
+                android:id="@+id/linearLayout3"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_toEndOf="@+id/linearLayout"
+                android:weightSum="1">
+
+                <ImageView
+                    android:layout_width="138dp"
+                    android:layout_height="70dp"
+                    android:src="@drawable/team2"
+                    android:id="@+id/img_team2"
+                    android:gravity="center"
+                    android:layout_above="@+id/team2" />
+
+                <TextView
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:layout_marginLeft="20dp"
+                    android:textStyle="bold"
+                    android:textColor="#ffffff"
+                    android:text="TEAM2"
+                    android:id="@+id/team2"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginTop="5sp" />
+
+            </LinearLayout>
         </LinearLayout>
 
-        <LinearLayout
+        <TextView
+            android:gravity="center"
+            android:layout_height="match_parent"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:maxLines="4"
+            android:lines="4"
             android:background="@color/colorPrimaryDark"
-            android:paddingBottom="10dp"
-            android:paddingRight="10dp"
-            android:layout_marginRight="5sp"
-            android:elevation="4dp">
+            android:textColor="@color/colorPrimary"
+            android:text="ground"
+            android:id="@+id/txt_ground"
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="TEAM 1"
-                android:textStyle="bold"
-                android:textColor="@color/colorAccent"
-                android:layout_marginLeft="20dp"
-                android:id="@+id/team1" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Vs                                                                         "
-                android:id="@+id/textView2"
-                android:textColor="@color/colorAccent"
-                android:layout_marginLeft="20dp"
-                android:textSize="20sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:layout_marginLeft="20dp"
-                android:textStyle="bold"
-                android:textColor="@color/colorAccent"
-                android:text="TEAM2"
-                android:id="@+id/team2" />
-        </LinearLayout>
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true" />
 
 
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
-
 
