--- a/Aarppo/app/src/main/res/menu/activity_blasters_main_drawer.xml
+++ b/Aarppo/app/src/main/res/menu/activity_blasters_main_drawer.xml
@@ -4,16 +4,16 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_match_blasters"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Blasters Match" />
+            android:icon="@drawable/ic_star"
+            android:title="Blasters' Match" />
         <item
             android:id="@+id/nav_schedule"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Match Schedule" />
+            android:icon="@drawable/ic_assignment"
+            android:title="ISL Schedule" />
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Settings" />
+            android:title="Preview" />
     </group>
 
     <item android:title="Communicate">
@@ -23,9 +23,17 @@
                 android:icon="@drawable/ic_menu_share"
                 android:title="Share" />
             <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:id="@+id/nav_rateus"
+                android:icon="@drawable/ic_shop_two"
+                android:title="Rate Us" />
+            <item
+                android:id="@+id/nav_contact"
+                android:icon="@drawable/ic_business"
+                android:title="Contact Us" />
+            <item
+                android:id="@+id/nav_credit"
+                android:icon="@drawable/ic_assignment"
+                android:title="Credits" />
         </menu>
     </item>
 
