--- a/Aarppo/app/src/main/res/layout/fragment_islmatch_page.xml
+++ b/Aarppo/app/src/main/res/layout/fragment_islmatch_page.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="60sp"
     tools:context="com.appstory.aarppo.ISLMatchPage">
 
@@ -137,7 +138,8 @@
             android:layout_height="fill_parent"
             android:background="@color/colorPrimary"
             android:layout_below="@+id/textView9"
-            android:layout_alignParentStart="true">
+            android:layout_alignParentStart="true"
+            android:id="@+id/relativeLayout">
             <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -221,7 +223,20 @@
                 android:checked="false"
                 android:textColor="#ffffff"
                 android:buttonTint="@color/colorPrimaryDark"/>
+
         </RelativeLayout>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:src="@drawable/ic_play_circle_filled_white"
+            app:layout_anchorGravity="bottom|right|end"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_alignTop="@+id/textView9"
+            android:layout_alignParentEnd="true" />
 
 
     </RelativeLayout>
