--- a/Aarppo/app/src/main/res/layout/nav_header_blasters_main.xml
+++ b/Aarppo/app/src/main/res/layout/nav_header_blasters_main.xml
@@ -18,9 +18,9 @@
         android:layout_height="200dp"
         android:paddingTop="16dp"
         android:layout_gravity="center_horizontal"
-        android:src="@mipmap/ic_logokerala"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
+        android:src="@drawable/logoicon"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="200dp"
