--- a/Aarppo/app/src/main/res/layout/fragment_settings_page.xml
+++ b/Aarppo/app/src/main/res/layout/fragment_settings_page.xml
@@ -4,12 +4,117 @@
     android:layout_height="match_parent"
     android:layout_marginTop="60sp"
     android:layout_marginLeft="20sp"
+
+    android:layout_marginRight="20sp"
     tools:context="com.appstory.aarppo.SettingsPage">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Settings" />
+        android:layout_height="match_parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Theyyare Theyyare"
+            android:id="@+id/textView2"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="21dp"
+            android:layout_marginTop="22dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Theyyare Theyyare (2)"
+            android:id="@+id/textView3"
+            android:layout_below="@+id/textView2"
+            android:layout_alignStart="@+id/textView2" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Arabikadalin thirapole"
+            android:id="@+id/textView10"
+            android:layout_below="@+id/textView3"
+            android:layout_alignStart="@+id/textView3"
+            android:layout_marginTop="35dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Kuthichu varunnavar aarenno"
+            android:id="@+id/textView12"
+            android:layout_below="@+id/textView10"
+            android:layout_alignStart="@+id/textView10" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="(theyyare theyyare)"
+            android:id="@+id/textView13"
+            android:layout_below="@+id/textView12"
+            android:layout_alignStart="@+id/textView12" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Minnaladikkana vegathil"
+            android:id="@+id/textView14"
+            android:layout_below="@+id/textView13"
+            android:layout_alignStart="@+id/textView13"
+            android:layout_marginTop="21dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Goal adichettanathaarenno"
+            android:id="@+id/textView15"
+            android:layout_below="@+id/textView14"
+            android:layout_alignStart="@+id/textView14" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="(theyyare theyyare)"
+            android:id="@+id/textView16"
+            android:layout_below="@+id/textView15"
+            android:layout_alignStart="@+id/textView15" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nenju virichu kalichu mathikkum"
+            android:id="@+id/textView17"
+            android:layout_below="@+id/textView16"
+            android:layout_alignStart="@+id/textView16"
+            android:layout_marginTop="26dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Kombanmaaravar kandolu"
+            android:id="@+id/textView18"
+            android:layout_below="@+id/textView17"
+            android:layout_alignStart="@+id/textView17" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Kerala Blasters... Kerala Blasters..."
+            android:id="@+id/textView19"
+            android:layout_below="@+id/textView18"
+            android:layout_alignStart="@+id/textView18"
+            android:layout_marginTop="31dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Kerala Blasters... Kerala Blasters..."
+            android:id="@+id/textView20"
+            android:layout_below="@+id/textView19"
+            android:layout_alignStart="@+id/textView19"
+            android:layout_marginTop="17dp" />
+    </RelativeLayout>
 
 </FrameLayout>
