--- a/Aarppo/app/src/main/res/menu/activity_blasters_main_drawer.xml
+++ b/Aarppo/app/src/main/res/menu/activity_blasters_main_drawer.xml
@@ -13,7 +13,7 @@
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Preview" />
+            android:title="Blasters' Song Lyrics" />
     </group>
 
     <item android:title="Communicate">
