Changes from kolencherry;; final ui changes

--- a/Aarppo/app/src/main/res/drawable/side_nav_bar.xml
+++ b/Aarppo/app/src/main/res/drawable/side_nav_bar.xml
@@ -2,8 +2,8 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:centerColor="#f4db20"
-        android:endColor="#dccb4a"
-        android:startColor="#f4db20"
+        android:centerColor="#ffff0f"
+        android:endColor="#ffff0f"
+        android:startColor="#ffff0f"
         android:type="linear" />
 </shape>
