--- a/Aarppo/app/src/main/res/layout/activity_flash_only_screen.xml
+++ b/Aarppo/app/src/main/res/layout/activity_flash_only_screen.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.appstory.aarppo.PreviewActivity"
-    tools:showIn="@layout/activity_preview">
+    android:id="@+id/flash_only"
+    tools:context="com.appstory.aarppo.flash_only_screen">
 
 </RelativeLayout>
