--- a/Aarppo/app/src/main/res/layout/custom_list_match_schedule.xml
+++ b/Aarppo/app/src/main/res/layout/custom_list_match_schedule.xml
@@ -27,12 +27,14 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="TEAM 1"
+            android:gravity="center"
             android:textStyle="bold"
             android:textColor="#ffffff"
             android:layout_marginLeft="20dp"
             android:id="@+id/team1"
-            android:layout_centerVertical="true"
-            android:layout_alignParentStart="true" />
+            android:layout_marginEnd="17dp"
+            android:layout_above="@+id/txt_ground"
+            android:layout_alignEnd="@+id/img_team1" />
         <ImageView
             android:layout_width="138dp"
             android:layout_height="70dp"
@@ -50,31 +52,34 @@
             android:textStyle="bold"
             android:textColor="#ffffff"
             android:text="TEAM2"
+            android:gravity="center"
             android:id="@+id/team2"
-            android:layout_centerVertical="true"
-            android:layout_alignStart="@+id/img_team2" />
+            android:layout_above="@+id/txt_ground"
+            android:layout_alignStart="@+id/img_team2"
+            android:layout_marginStart="17dp" />
         <TextView
             android:gravity="center"
-            android:layout_height="match_parent"
+            android:layout_height="20dp"
             android:layout_width="match_parent"
-            android:maxLines="4"
-            android:lines="4"
+            android:maxLines="2"
+            android:lines="2"
             android:background="@color/colorPrimaryDark"
             android:textColor="@color/colorPrimary"
             android:text="ground"
             android:id="@+id/txt_ground"
-            android:layout_below="@+id/linearLayout"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true" />
 
         <RelativeLayout
-            android:layout_width="60dp"
+            android:layout_width="80dp"
             android:layout_height="100dp"
             android:orientation="vertical"
             android:background="@color/colorPrimaryDark"
             android:layout_marginLeft="5dp"
             android:id="@+id/linearLayout"
-            android:layout_centerHorizontal="true">
+            android:layout_centerHorizontal="true"
+            android:layout_alignBottom="@+id/team2"
+            android:layout_alignParentTop="true">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -82,7 +87,7 @@
                 android:textColor="@color/colorPrimary"
                 android:text="Date and Time"
                 android:gravity="center"
-                android:textSize="20dp"
+                android:textSize="25dp"
                 android:textStyle="bold"
                 android:id="@+id/tv_name"
                 android:layout_above="@+id/txt_mnth"
@@ -94,7 +99,7 @@
                 android:layout_height="wrap_content"
                 android:text="month"
                 android:gravity="center"
-                android:textSize="20dp"
+                android:textSize="25dp"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@color/colorPrimary"
                 android:textStyle="bold"
