--- a/Aarppo/app/src/main/res/layout/fragment_blasters_match.xml
+++ b/Aarppo/app/src/main/res/layout/fragment_blasters_match.xml
@@ -3,16 +3,37 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="60sp"
-    android:layout_marginLeft="10sp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.appstory.aarppo.BlastersMatchFragment">
 
+
+
     <!-- TODO: Update blank fragment layout -->
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/lv_BlastersmatchList"
+        android:divider="#ffffff"
+        android:dividerHeight="0dp"
         android:layout_marginRight="10sp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:backgroundTint="@color/colorPrimaryDark"
+        android:tint="@color/colorPrimary"
+        android:src="@drawable/ic_highlight"
+        android:layout_gravity="right|center_vertical"
+        android:layout_alignParentBottom="true"
+        android:layout_alignEnd="@+id/lv_BlastersmatchList" />
+    </RelativeLayout>
 
 </FrameLayout>
