--- a/Aarppo/app/src/main/res/layout/fragment_contact_us.xml
+++ b/Aarppo/app/src/main/res/layout/fragment_contact_us.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,9 +8,66 @@
     tools:context="com.appstory.aarppo.ContactUs">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Contact us" />
+        android:layout_height="wrap_content"
+        android:id="@+id/relativeLayout2">
 
-</FrameLayout>
+    </RelativeLayout>
+
+    <ImageView
+        android:layout_width="150138dp"
+        android:layout_height="150dp"
+        android:src="@drawable/arpo"
+        android:gravity="center"
+        android:id="@+id/imglog"
+        android:layout_below="@+id/relativeLayout2"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Mail : arpoappsolutions@gmail.com"
+        android:textSize="15dp"
+        android:layout_marginBottom="38dp"
+        android:layout_above="@+id/textView5"
+        android:layout_alignParentStart="true"
+        android:id="@+id/textView22" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Twitter : @arpoapps"
+        android:textSize="15dp"
+        android:id="@+id/textView5"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Facebook : facebook.com/arpoapps"
+        android:textSize="15dp"
+        android:layout_marginTop="39dp"
+        android:id="@+id/textView6"
+        android:layout_below="@+id/textView5"
+        android:layout_alignParentStart="true" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Music Credits"
+        android:textSize="20dp"
+        android:layout_marginTop="43dp"
+        android:id="@+id/textView7"
+        android:layout_below="@+id/textView6"
+        android:layout_centerHorizontal="true" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Arun and Rahul "
+        android:gravity="center"
+        android:textSize="15dp"
+        android:layout_below="@+id/textView7"
+        android:layout_alignStart="@+id/textView7"
+        android:layout_alignEnd="@+id/textView4" />
+
+
+</RelativeLayout>
