--- a/Aarppo/app/src/main/res/layout/fragment_islmatch_page.xml
+++ b/Aarppo/app/src/main/res/layout/fragment_islmatch_page.xml
@@ -1,71 +1,70 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginTop="60sp"
     tools:context="com.appstory.aarppo.ISLMatchPage">
 
-    <!-- TODO: Update blank fragment layout -->
-
-
     <RelativeLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center">
+        android:layout_height="wrap_content"
+        android:id="@+id/relativeLayout3"
+        android:paddingBottom="15dp"
+        android:background="@color/colorPrimaryDark">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="days"
-            android:textColor="@color/colorAccent"
-            android:id="@+id/textView4"
-            android:layout_marginStart="47dp"
+            android:text="Team1"
+            android:minLines="2"
+            android:gravity="center"
+            android:lines="2"
+            android:id="@+id/isl_team1"
+            android:textStyle="bold"
+            android:textSize="20dp"
+            android:textColor="@color/colorPrimary"
+            android:layout_marginTop="28dp"
             android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:layout_toStartOf="@+id/textView" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="hours"
-            android:textColor="@color/colorAccent"
-            android:id="@+id/textView5"
-            android:layout_marginStart="42dp"
-            android:layout_above="@+id/txt_countDown"
-            android:layout_toEndOf="@+id/textView4" />
+            android:text="Vs"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimary"
+            android:id="@+id/textView8"
+            android:layout_alignBaseline="@+id/isl_team1"
+            android:layout_alignBottom="@+id/isl_team1"
+            android:layout_centerHorizontal="true" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="minutes"
-            android:textColor="@color/colorAccent"
-            android:id="@+id/textView6"
-            android:layout_marginStart="40dp"
+            android:text="Team2"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textSize="20dp"
+            android:textColor="@color/colorPrimary"
+            android:minLines="2"
+            android:lines="2"
+            android:id="@+id/isl_team2"
+            android:layout_marginTop="28dp"
             android:layout_alignParentTop="true"
-            android:layout_toEndOf="@+id/textView5" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="seconds"
-            android:textColor="@color/colorAccent"
-            android:id="@+id/textView7"
-            android:layout_alignParentTop="true"
-            android:layout_toEndOf="@+id/textView6"
-            android:layout_marginStart="28dp" />
-
+            android:layout_alignParentEnd="true"
+            android:layout_toEndOf="@+id/textView" />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="10dp"
-            android:paddingBottom="10dp"
             android:text="00: 00 : 00 : 00"
             android:textColor="@color/colorPrimary"
             android:textStyle="bold"
-            android:background="@color/colorPrimaryDark"
             android:gravity="center"
             android:id="@+id/txt_countDown"
-            android:textSize="40sp"
-            android:elevation="3dp"
-            android:layout_below="@+id/textView4"
+            android:textSize="50sp"
+            android:layout_below="@+id/isl_team1"
             android:layout_alignParentStart="true" />
         <TextView
             android:layout_width="wrap_content"
@@ -74,170 +73,108 @@
             android:id="@+id/textView"
             android:textColor="@color/colorAccent"
             android:textAlignment="center"
-            android:layout_gravity="right"
+            android:layout_gravity="center"
             android:layout_below="@+id/txt_countDown"
-            android:layout_alignStart="@+id/textView7" />
+            android:layout_centerHorizontal="true" />
+    </RelativeLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Team1"
-            android:maxLines="2"
-            android:lines="2"
-            android:id="@+id/isl_team1"
-            android:textStyle="bold"
-            android:textSize="20dp"
-            android:textColor="@color/colorPrimary"
-            android:layout_below="@+id/textView8"
-            android:layout_alignEnd="@+id/textView5"
-            android:layout_alignStart="@+id/textView4" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Vs"
-            android:textStyle="bold"
-            android:textColor="@color/colorAccent"
-            android:id="@+id/textView8"
-            android:layout_marginTop="24dp"
-            android:layout_below="@+id/textView"
-            android:layout_centerHorizontal="true" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Team2"
-            android:textStyle="bold"
-            android:textSize="20dp"
-            android:textColor="@color/colorPrimary"
-            android:maxLines="2"
-            android:lines="2"
-            android:id="@+id/isl_team2"
-            android:layout_alignTop="@+id/isl_team1"
-            android:layout_alignEnd="@+id/textView"
-            android:layout_toEndOf="@+id/textView6" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Ground"
-            android:textColor="@color/colorAccent"
-            android:id="@+id/isl_ground"
-            android:layout_below="@+id/isl_team2"
-            android:layout_centerHorizontal="true" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimary"
+        android:layout_below="@+id/relativeLayout3"
+        android:id="@+id/relativeLayout">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="CHEERING TIMES"
-            android:textSize="25dp"
+            android:text="Arpo timings"
+            android:textSize="20dp"
             android:id="@+id/textView9"
-            android:textColor="@color/colorPrimary"
-            android:layout_marginTop="49dp"
-            android:layout_below="@+id/isl_ground"
-            android:layout_alignParentStart="true" />
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="fill_parent"
-            android:background="@color/colorPrimary"
-            android:layout_below="@+id/textView9"
+            android:textColor="#ffffff"
+            android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
-            android:id="@+id/relativeLayout">
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="10th minute"
-                android:id="@+id/chk_Aarpo1"
-                android:checked="false"
-                android:textColor="#ffffff"
-                android:buttonTint="@color/colorPrimaryDark"
-                android:layout_marginStart="42dp"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentStart="true"
-                android:layout_marginTop="25dp" />
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="20th minute"
-                android:id="@+id/chk_Aarpo2"
-                android:checked="false"
-                android:textColor="#ffffff"
-                android:buttonTint="@color/colorPrimaryDark"
-                android:layout_below="@+id/chk_Aarpo1"
-                android:layout_alignStart="@+id/chk_Aarpo1" />
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="30th minute"
-                android:id="@+id/chk_Aarpo3"
-                android:checked="false"
-                android:textColor="#ffffff"
-                android:buttonTint="@color/colorPrimaryDark"
-                android:layout_below="@+id/chk_Aarpo2"
-                android:layout_alignStart="@+id/chk_Aarpo2" />
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="45th minute"
-                android:id="@+id/chk_Aarpo4"
-                android:checked="false"
-                android:textColor="#ffffff"
-                android:buttonTint="@color/colorPrimaryDark"
-                android:layout_below="@+id/chk_Aarpo3"
-                android:layout_alignStart="@+id/chk_Aarpo3" />
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="50th minute"
-                android:id="@+id/chk_Aarpo5"
-                android:checked="false"
-                android:textColor="#ffffff"
-                android:buttonTint="@color/colorPrimaryDark"
-                android:layout_marginStart="56dp"
-                android:layout_above="@+id/chk_Aarpo6"
-                android:layout_toEndOf="@+id/chk_Aarpo1" />
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="60th minute"
-                android:id="@+id/chk_Aarpo6"
-                android:layout_alignBottom="@+id/chk_Aarpo2"
-                android:layout_alignStart="@+id/chk_Aarpo5"
-                android:checked="false"
-                android:textColor="#ffffff"
-                android:buttonTint="@color/colorPrimaryDark"/>
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="75th minute"
-                android:id="@+id/chk_Aarpo7"
-                android:layout_alignTop="@+id/chk_Aarpo3"
-                android:layout_alignStart="@+id/chk_Aarpo6"
-                android:checked="false"
-                android:textColor="#ffffff"
-                android:buttonTint="@color/colorPrimaryDark"/>
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="85th minute"
-                android:id="@+id/chk_Aarpo8"
-                android:layout_alignBottom="@+id/chk_Aarpo4"
-                android:layout_alignStart="@+id/chk_Aarpo7"
-                android:checked="false"
-                android:textColor="#ffffff"
-                android:buttonTint="@color/colorPrimaryDark"/>
+            android:layout_marginTop="40dp" />
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="6:58 PM"
+            android:id="@+id/chk_Aarpo1"
+            android:checked="false"
+            android:textColor="#ffffff"
+            android:buttonTint="@color/colorPrimaryDark"
+            android:layout_marginStart="44dp"
+            android:layout_marginTop="35dp"
+            android:layout_below="@+id/textView9"
+            android:layout_alignParentStart="true" />
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="20th minute"
+            android:id="@+id/chk_Aarpo2"
+            android:checked="false"
+            android:textColor="#ffffff"
+            android:buttonTint="@color/colorPrimaryDark"
+            android:layout_below="@+id/chk_Aarpo1"
+            android:layout_alignStart="@+id/chk_Aarpo1"
+            android:layout_marginTop="35dp" />
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="30th minute"
+            android:id="@+id/chk_Aarpo3"
+            android:checked="false"
+            android:textColor="#ffffff"
+            android:buttonTint="@color/colorPrimaryDark"
+            android:layout_marginTop="35dp"
+            android:layout_below="@+id/chk_Aarpo2"
+            android:layout_alignStart="@+id/chk_Aarpo2" />
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Half Time"
+            android:id="@+id/chk_Aarpo4"
+            android:checked="false"
+            android:textColor="#ffffff"
+            android:buttonTint="@color/colorPrimaryDark"
+            android:layout_alignTop="@+id/chk_Aarpo1"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="48dp" />
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="50th minute"
+            android:id="@+id/chk_Aarpo5"
+            android:checked="false"
+            android:textColor="#ffffff"
+            android:buttonTint="@color/colorPrimaryDark"
+            android:layout_alignTop="@+id/chk_Aarpo2"
+            android:layout_alignStart="@+id/chk_Aarpo4" />
 
-        </RelativeLayout>
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="75th minute"
+            android:id="@+id/chk_Aarpo7"
+            android:checked="false"
+            android:textColor="#ffffff"
+            android:buttonTint="@color/colorPrimaryDark"
+            android:layout_alignTop="@+id/chk_Aarpo3"
+            android:layout_alignStart="@+id/chk_Aarpo5" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clickable="true"
+            app:backgroundTint="@color/colorPrimaryDark"
+            android:tint="@color/colorPrimary"
             android:src="@drawable/ic_play_circle_filled_white"
             app:layout_anchorGravity="bottom|right|end"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_alignTop="@+id/textView9"
-            android:layout_alignParentEnd="true" />
-
+            android:layout_below="@+id/chk_Aarpo7"
+            android:layout_centerHorizontal="true" />
 
     </RelativeLayout>
-</FrameLayout>
+
+
+</RelativeLayout>
