--- a/Aarppo/app/src/main/res/layout/fragment_match_schedule.xml
+++ b/Aarppo/app/src/main/res/layout/fragment_match_schedule.xml
@@ -3,15 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="60sp"
-    android:layout_marginLeft="5sp"
-    android:layout_marginRight="5sp"
     tools:context="com.appstory.aarppo.MatchSchedule">
 
     <!-- TODO: Update blank fragment layout -->
     <ListView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/lv_matchList"
+        android:divider="#ffffff"
+        android:dividerHeight="0dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
