--- a/Aarppo/app/src/main/res/menu/activity_blasters_main_drawer.xml
+++ b/Aarppo/app/src/main/res/menu/activity_blasters_main_drawer.xml
@@ -4,7 +4,7 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_match_blasters"
-            android:icon="@drawable/ic_star"
+            android:icon="@drawable/ic_event"
             android:title="Blasters' Schedule" />
         <item
             android:id="@+id/nav_schedule"
@@ -12,7 +12,7 @@
             android:title="ISL Schedule" />
         <item
             android:id="@+id/nav_settings"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/ic_library_music"
             android:title="Blasters' Song Lyrics" />
     </group>
 
@@ -24,16 +24,13 @@
                 android:title="Share" />
             <item
                 android:id="@+id/nav_rateus"
-                android:icon="@drawable/ic_shop_two"
+                android:icon="@drawable/ic_star"
                 android:title="Rate Us" />
             <item
                 android:id="@+id/nav_contact"
                 android:icon="@drawable/ic_business"
                 android:title="Developers" />
-            <item
-                android:id="@+id/nav_credit"
-                android:icon="@drawable/ic_assignment"
-                android:title="Credits" />
+
         </menu>
     </item>
 
