--- a/Aarppo/app/src/main/res/values/colors.xml
+++ b/Aarppo/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#1a237e</color>
-    <color name="colorPrimaryDark">#f4db20</color>
+    <color name="colorPrimaryDark">#ffff0f</color>
     <color name="colorAccent">#3f51b5</color>
 </resources>
