--- a/Aarppo/app/src/main/res/layout/fragment_blasters_match.xml
+++ b/Aarppo/app/src/main/res/layout/fragment_blasters_match.xml
@@ -1,5 +1,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="60sp"
@@ -32,8 +33,19 @@
         android:tint="@color/colorPrimary"
         android:src="@drawable/ic_highlight"
         android:layout_gravity="right|center_vertical"
+        android:layout_marginEnd="13dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignEnd="@+id/lv_BlastersmatchList" />
-    </RelativeLayout>
+        android:layout_alignEnd="@+id/lv_BlastersmatchList"
+        android:layout_marginBottom="36dp" />
 
+        <com.google.android.gms.ads.AdView
+            android:id="@+id/adView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            ads:adSize="BANNER"
+            ads:adUnitId="@string/banner_ad_unit_id"
+            android:layout_alignParentBottom="true"
+            android:layout_alignStart="@+id/lv_BlastersmatchList" />
+    </RelativeLayout>
+    <!-- view for AdMob Banner Ad -->
 </FrameLayout>
