--- a/Aarppo/app/src/main/res/layout/fragment_match_schedule.xml
+++ b/Aarppo/app/src/main/res/layout/fragment_match_schedule.xml
@@ -1,5 +1,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="60sp"
@@ -14,5 +15,15 @@
         android:dividerHeight="0dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_ad_unit_id"
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/lv_BlastersmatchList"
+        android:layout_gravity="left|bottom" />
 
 </FrameLayout>
