--- a/Aarppo/app/src/main/res/layout/fragment_settings_page.xml
+++ b/Aarppo/app/src/main/res/layout/fragment_settings_page.xml
@@ -1,5 +1,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="60sp"
@@ -115,6 +116,15 @@
             android:layout_below="@+id/textView19"
             android:layout_alignStart="@+id/textView19"
             android:layout_marginTop="17dp" />
-    </RelativeLayout>
 
+        <com.google.android.gms.ads.AdView
+            android:id="@+id/adView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            ads:adSize="BANNER"
+            ads:adUnitId="@string/banner_ad_unit_id"
+            android:layout_gravity="left|bottom"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true" />
+    </RelativeLayout>
 </FrameLayout>
