--- a/Aarppo/app/src/main/res/drawable/side_nav_bar.xml
+++ b/Aarppo/app/src/main/res/drawable/side_nav_bar.xml
@@ -2,8 +2,8 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:centerColor="#ffff0f"
+        android:centerColor="#3f51b5"
         android:endColor="#ffff0f"
-        android:startColor="#ffff0f"
+        android:startColor="#1a237e"
         android:type="linear" />
 </shape>
