Avatar creation is added Updating view when client connected is updated

--- a/MyChallenge/app/src/main/res/layout/fragment_fragment__challenge_main.xml
+++ b/MyChallenge/app/src/main/res/layout/fragment_fragment__challenge_main.xml
@@ -30,11 +30,20 @@
                     <ListView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="60dp"
                         android:id="@+id/list_challengeList" />
 
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Create My Avatar"
+                android:id="@+id/btn_create_avatar"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" />
 
 
-            </RelativeLayout>
+        </RelativeLayout>
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
