--- a/MyChallenge/app/src/main/res/layout/fragment_home_page.xml
+++ b/MyChallenge/app/src/main/res/layout/fragment_home_page.xml
@@ -16,5 +16,14 @@
           android:id="@+id/btn_challenge"
           android:layout_centerVertical="true"
           android:layout_centerHorizontal="true" />
+
+      <Button
+          android:id="@+id/btn_challengemyself"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginBottom="33dp"
+          android:text="CHALLENGE MYSELF"
+          android:layout_above="@+id/btn_challenge"
+          android:layout_centerHorizontal="true" />
   </RelativeLayout>
 </FrameLayout>
