--- a/MyChallenge/app/src/main/res/layout/fragment_main.xml
+++ b/MyChallenge/app/src/main/res/layout/fragment_main.xml
@@ -6,6 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/colorAccent"
     tools:context="com.arpo.mychallenge.MainActivityFragment"
     tools:showIn="@layout/activity_main">
 
@@ -20,6 +21,8 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/flContent">
+        android:id="@+id/flContent"
+        >
+
         </FrameLayout>
 </RelativeLayout>
