--- a/MyChallenge/app/src/main/res/values/colors.xml
+++ b/MyChallenge/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#28201c</color>
     <color name="green">#74BA48</color>
 </resources>
