--- a/MyChallenge/app/src/main/res/layout/fragment_fragment_description.xml
+++ b/MyChallenge/app/src/main/res/layout/fragment_fragment_description.xml
@@ -73,7 +73,7 @@
             android:layout_height="0dp"
             android:layout_weight="0.8"
             android:text="Challenge"
-            android:id="@+id/btn_challenge"
+            android:id="@+id/btn_description_challenge"
             android:layout_gravity="right"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp" />
