Database operation completed

--- a/MyChallenge/app/src/main/res/values/colors.xml
+++ b/MyChallenge/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="light_green">#00ff04</color>
     <color name="colorAccent">#28201c</color>
     <color name="green">#74BA48</color>
+    <color name="grey">#2b2c2c</color>
 </resources>
