--- a/MyChallenge/app/src/main/res/layout/customlistviewexcersises.xml
+++ b/MyChallenge/app/src/main/res/layout/customlistviewexcersises.xml
@@ -129,8 +129,7 @@
                         android:text="1.23s"
                         android:textAlignment="center"
                         android:textColor="#d65e05"
-                        android:textSize="18sp"
- />
+                        android:textSize="12sp" />
                 </RelativeLayout>
 
             </LinearLayout>
